Dynamic loading (WIP)

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -35,14 +35,66 @@
 
       <hr>
 
-      <div class="container">
-        <div class="row" id="motive">
+      <div class="container bs-component">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active show" data-toggle="tab" href="#inhalt">Inhalt</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#form">Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#anderes">Anderes</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active show" id="inhalt">
+            <h5>Motive</h5>
 
-        </div>
+          </div>
+          <div class="tab-pane" id="form"></div>
+          <div class="tab-pane" id="anderes">
+            <div class="row">
+              <div class="col-sm-6">
 
-        <div class="row" style="display:none">
-          <div class="col-sm-10 col-sm-offset-1">
-            {% block content %}{% endblock %}
+                <h5>Chronologie</h5>
+                <div class="form-group">
+                  <label class="col-form-label" for="inputJahr">Jahreszahl</label>
+                  <input class="form-control" placeholder="1983" id="inputJahr" type="text">
+                </div>
+
+                <div class="form-group">
+                  <div class="form-check"><label class="form-check-label">
+                    <input class="form-check-input" name="optionsJahr" value="2000-2018" type="radio">
+                    2000–2018
+                  </label></div><div class="form-check"><label class="form-check-label">
+                    <input class="form-check-input" name="optionsJahr" value="1985-1999" type="radio">
+                    1985–1999
+                  </label></div><div class="form-check"><label class="form-check-label">
+                    <input class="form-check-input" name="optionsJahr" value="1979-1984" type="radio">
+                    1979–1984
+                  </label></div><div class="form-check"><label class="form-check-label">
+                    <input class="form-check-input" name="optionsJahr" value="1973-1978" type="radio">
+                    1973–1978
+                  </label></div>
+                </div>
+
+                <h5>Titel</h5>
+                <div class="form-group">
+                  <label class="col-form-label" for="inputTitel">(alphabetisch)</label>
+                  <input class="form-control" placeholder="" id="inputTitel" type="text">
+                </div>
+
+              </div><div class="col-sm-6">
+
+                <h5>Thematische Kurztouren</h5>
+                <div id="kurztouren"></div>
+
+                <h5>Zufallsgenerator</h5>
+                <button class="btn btn-lg">&infin;</button>
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
