--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -50,7 +50,7 @@
         <div class="tab-content">
           <div class="tab-pane active show" id="inhalt">
             <h5>Motive</h5>
-
+            <div data-tag="form"></div>
           </div>
           <div class="tab-pane" id="form"></div>
           <div class="tab-pane" id="anderes">
