--- a/static/custom.css
+++ b/static/custom.css
@@ -5,3 +5,17 @@ body {
 .tab-content h5 {
   margin-top: 1em;
 }
+
+.nav-tabs > li:first-child {
+  margin-left: 25%;
+}
+
+.nav-tabs {
+  margin-top: 1em;
+}
+
+.container.main {
+  border-top: 1px solid #ddd;
+  margin-top: 1em;
+  padding-top: 1em;
+}
