--- a/static/custom.css
+++ b/static/custom.css
@@ -19,3 +19,12 @@ body {
   margin-top: 1em;
   padding-top: 1em;
 }
+
+.form-group .form-check {
+  padding-bottom: 0.5em;
+}
+.form-group .form-check small {
+  background: #eee; color: #333;
+  padding: 0.2em 0.4em;
+  display: inline-block;
+}
