--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -59,6 +59,7 @@
 
                 <h5>Chronologie</h5>
                 <div class="form-group"
+                     data-cols="1"
                      data-tag="zeit"
                      data-type="Chronologie"></div>
 
@@ -66,6 +67,12 @@
                 <div class="form-group">
                   <label class="col-form-label" for="inputTitel">(alphabetisch)</label>
                   <input class="form-control" placeholder="" id="inputTitel" type="text">
+                </div>
+
+                <div class="form-group"
+                     data-cols="1"
+                     data-tag="standort"
+                     data-type="Standort">
                 </div>
 
               </div><div class="col-sm-6">
