--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -90,6 +90,7 @@
       </div>
 
       <div class="container main" id="results" style="display:none">
+        <div id="selection"></div>
         <h4>Werke</h4>
         <div class="row"></div>
       </div>
