--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -97,12 +97,8 @@
       </div>
 
       <div class="container main" id="details" style="display:none">
-        <h4 class="name"></h4>
+        <div class="image"></div>
         <div class="row">
-          <div class="col-sm-12">
-            <img>
-          </div>
-        </div><div class="row">
           <div class="col-sm-8">
             <b data-fld="Titel"></b>
           </div><div class="col-sm-4">
