--- a/static/custom.css
+++ b/static/custom.css
@@ -53,13 +53,14 @@ body {
   top: 0px;
   left: 0px;
   width: 100%;
+  height: 100%;
+  overflow: hidden;
   max-width: none;
 }
 
 #details .image {
   cursor: pointer;
   margin-top: 10px;
-  height: 760px;
   overflow: hidden;
   width: 100%;
   background-size: contain;
