--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/custom.css">
   </head>
   <body>
-    <div class="container">
+    <div class="top container">
 
       <div class="page-header" id="banner">
         <div class="row">
@@ -96,18 +96,6 @@
         </div>
       </div>
 
-      <div class="container main" id="details" style="display:none">
-        <div class="image"></div>
-        <div class="row">
-          <div class="col-sm-8">
-            <b data-fld="Titel"></b>
-          </div><div class="col-sm-4">
-            <span data-fld="Jahr"></span>
-            <span data-fld="Format"></span>
-          </div>
-        </div>
-      </div>
-
       <footer id="footer" style="display:none">
         <div class="row">
           <div class="col-lg-12">
@@ -122,6 +110,19 @@
         </div>
 
       </footer>
+    </div>
+
+    <div class="container main" id="details" style="display:none">
+      <div class="image"></div>
+      <div class="row">
+        <div class="col-sm-12">
+          <b data-fld="Titel"></b> &nbsp;
+          (<span data-fld="Nummer"></span>) &nbsp;
+          <span data-fld="Technik"></span> &nbsp;
+          <span data-fld="Format"></span> cm &nbsp;
+          <span data-fld="Jahr"></span>
+        </div>
+      </div>
     </div>
 
     <script src="/static/lib/jquery-3.3.1.js"></script>
