--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -21,11 +21,11 @@
           </div>
           <div class="col-sm-4">
             Suche nach Werknummer
-            <input type="text" size="4">
+            <input class="searchOnEnter" name="Nummer" type="text" size="4">
           </div>
           <div class="col-sm-4">
             ausgewählte Dokumente
-            <input id="total" type="text" size="4" disabled>
+            <input id="total" size="4" disabled>
           </div>
           <div class="col-sm-1">
             <button class="btn btn-md" id="start">Zeigen</button>
@@ -54,7 +54,7 @@
 
                 <div class="form-group">
                   <label class="col-form-label" for="inputJahr">Jahreszahl</label>
-                  <input class="form-control" placeholder="1983" name="inputJahr" type="text">
+                  <input class="form-control" placeholder="1983" name="Jahr" type="text">
                 </div>
 
                 <h5>Chronologie</h5>
@@ -66,7 +66,7 @@
                 <h5>Titel</h5>
                 <div class="form-group">
                   <label class="col-form-label" for="inputTitel">(alphabetisch)</label>
-                  <input class="form-control" placeholder="" name="inputTitel" type="text">
+                  <input class="form-control" placeholder="" name="Titel" type="text">
                 </div>
 
                 <div class="form-group" data-cols="1"
@@ -128,6 +128,7 @@
     <script src="/static/lib/jquery-3.3.1.js"></script>
     <script src="/static/lib/bootstrap.js"></script>
 
+    <script src="/static/search.js"></script>
     <script src="/static/site.js"></script>
   </body>
 </html>
