--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -118,7 +118,7 @@
         <div class="col-sm-12">
           <b data-fld="Titel"></b> &nbsp;
           (<span data-fld="Nummer"></span>) &nbsp;
-          <span data-fld="Technik"></span> &nbsp;
+          <span data-fld="Techniken"></span> &nbsp;
           <span data-fld="Format"></span> cm &nbsp;
           <span data-fld="Jahr"></span>
         </div>
