Disabled incomplete features

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -23,10 +23,12 @@
             Suche nach Werknummer
             <input class="searchOnEnter" name="Nummer" type="text" size="4">
           </div>
+<!--
           <div class="col-sm-4">
             ausgewählte Dokumente
             <input id="total" size="4" disabled>
           </div>
+-->        
           <div class="col-sm-1">
             <button class="btn btn-md" id="start">Zeigen</button>
           </div>
@@ -57,15 +59,18 @@
                   <input class="form-control" placeholder="1983" name="Jahr" type="text">
                 </div>
 
+<!--
                 <h5>Chronologie</h5>
                 <div class="form-group" data-cols="1"
                      data-tag="zeit"
                      data-type="Chronologie">
                 </div>
+-->
 
-                <h5>Titel</h5>
+              </div><div class="col-sm-6">
+
                 <div class="form-group">
-                  <label class="col-form-label" for="inputTitel">(alphabetisch)</label>
+                  <label class="col-form-label" for="inputTitel">Titel</label>
                   <input class="form-control" placeholder="" name="Titel" type="text">
                 </div>
 
@@ -73,7 +78,7 @@
                      data-tag="standort"
                      data-type="Standort">
                 </div>
-
+<!--
               </div><div class="col-sm-6">
 
                 <h5>Thematische Kurztouren</h5>
@@ -83,6 +88,7 @@
                 <button class="btn btn-lg">&infin;</button>
 
               </div>
+-->
             </div>
           </div>
         </div>
