--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -20,7 +20,7 @@
             <!-- <p class="lead">The medium is the message</p> -->
           </div>
           <div class="col-sm-4">
-            Suche nach Werknummer
+            Werknummer:
             <input class="searchOnEnter" name="Nummer" type="text" size="4">
           </div>
 <!--
@@ -28,7 +28,7 @@
             ausgewählte Dokumente
             <input id="total" size="4" disabled>
           </div>
--->        
+-->
           <div class="col-sm-1">
             <button class="btn btn-md" id="start">Zeigen</button>
           </div>
