--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/custom.css">
   </head>
   <body>
-    <div class="top container">
+    <div class="top container" id="browser">
 
       <div class="page-header" id="banner">
         <div class="row">
@@ -78,8 +78,10 @@
                      data-tag="standort"
                      data-type="Standort">
                 </div>
+
+              </div>
 <!--
-              </div><div class="col-sm-6">
+              <div class="col-sm-6">
 
                 <h5>Thematische Kurztouren</h5>
                 <div id="kurztouren"></div>
@@ -99,6 +101,9 @@
         <div class="container main">
           <h4>Werke</h4>
           <div class="row"></div>
+        </div>
+        <div class="pagination">
+          <button id="more" class="btn btn-lg" style="display:none">+ + + + +</button>
         </div>
       </div>
 
