--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -132,6 +132,7 @@
           <span data-fld="Techniken"></span> &nbsp;
           <span data-fld="Format"></span> cm &nbsp;
           <span data-fld="Jahr"></span>
+          <span data-fld="Zus'arbeit"></span>
         </div>
       </div>
     </div>
