Clears filter on click

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/custom.css">
   </head>
   <body>
-    <div class="top container" id="browser">
+    <div class="top container" id="browser"><form>
 
       <div class="page-header" id="banner">
         <div class="row">
@@ -121,7 +121,7 @@
         </div>
 
       </footer>
-    </div>
+    </form></div> <!-- // -.top.container -->
 
     <div class="container main" id="details" style="display:none">
       <div class="image"></div>
