--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -19,7 +19,7 @@
             <h5>Projekt PANOPTIKUM</h5>
             <!-- <p class="lead">The medium is the message</p> -->
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             Werknummer:
             <input class="searchOnEnter" name="Nummer" type="text" size="4">
           </div>
@@ -29,8 +29,9 @@
             <input id="total" size="4" disabled>
           </div>
 -->
-          <div class="col-sm-1">
-            <button class="btn btn-md" id="start">Zeigen</button>
+          <div class="col-sm-3">
+            <button class="btn btn-md btn-success" id="start">&#128065; Zeigen</button>
+            <button class="btn btn-md" id="random">&infin; Zufall</button>
           </div>
         </div>
       </div>
@@ -85,9 +86,6 @@
 
                 <h5>Thematische Kurztouren</h5>
                 <div id="kurztouren"></div>
-
-                <h5>Zufallsgenerator</h5>
-                <button class="btn btn-lg">&infin;</button>
 
               </div>
 -->
