Statistics and update

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -56,8 +56,8 @@
               <div class="col-sm-6">
 
                 <div class="form-group">
-                  <label class="col-form-label" for="inputJahr">Jahreszahl</label>
-                  <input class="form-control" placeholder="1983" name="Jahr" type="text">
+                  <label class="col-form-label" for="inputJahr">Jahreszahl (ab 1973)</label>
+                  <input class="form-control" placeholder="" name="Jahr" type="text">
                 </div>
 
 <!--
@@ -127,6 +127,7 @@
         <div class="col-sm-12">
           <b data-fld="Titel"></b> &nbsp;
           (<span data-fld="Nummer"></span>) &nbsp;
+          <!-- 2 Techniken: Gouache, Papier -->
           <span data-fld="Techniken"></span> &nbsp;
           <span data-fld="Format"></span> cm &nbsp;
           <span data-fld="Jahr"></span>
