--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -126,9 +126,8 @@
       <div class="row">
         <div class="col-sm-12">
           <b data-fld="Titel"></b> &nbsp;
-          (<span data-fld="Nummer"></span>) &nbsp;
-          <!-- 2 Techniken: Gouache, Papier -->
-          <span data-fld="Techniken"></span> &nbsp;
+          <span class="Nummer" data-fld="Nummer"></span>
+          <span class="Techniken" data-fld="Techniken"></span>
           <span data-fld="Format"></span> cm &nbsp;
           <span data-fld="Jahr"></span>
           <span data-fld="Zus'arbeit"></span>
