--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -32,6 +32,7 @@
           <div class="col-sm-3">
             <button class="btn btn-md btn-success" id="start">&#128065; Zeigen</button>
             <button class="btn btn-md" id="random">&infin; Zufall</button>
+            <button class="btn btn-md" id="restart">&times; Neuauswahl</button>
           </div>
         </div>
       </div>
