--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -27,7 +27,7 @@
 -->
           <div class="col-sm-6">
             <button class="btn btn-md btn-success" id="start">&#128065; Zeigen</button>
-            <button class="btn btn-md btn-default" id="restart">&cir; Neuauswahl</button>
+            <button class="btn btn-md btn-warning" id="restart">&cir; Neuauswahl</button>
             <button class="btn btn-md" id="random">&infin; Zufall</button>
           </div>
         </div>
