--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -127,6 +127,7 @@
       <div class="image"></div>
       <div class="row">
         <div class="col-sm-12">
+          <button class="btn btn-sm btn-warning" id="back">Zurück</button>
           <b data-fld="Titel"></b> &nbsp;
           <span class="Nummer" data-fld="Nummer"></span>
           <span class="Techniken" data-fld="Techniken"></span>
@@ -134,6 +135,12 @@
           <span data-fld="Jahr"></span>
           <span data-fld="Zus'arbeit"></span>
         </div>
+      </div>
+    </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="spinnerModal">
+      <div class="modal-dialog modal-dialog-centered text-center" role="document">
+        <span class="fa fa-spinner fa-spin fa-3x w-100">🖌 ⌛ 🎨</span>
       </div>
     </div>
 
