Custom sort order

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -19,12 +19,12 @@
             <h5>Projekt PANOPTIKUM</h5>
             <!-- <p class="lead">The medium is the message</p> -->
           </div>
-<!--
-          <div class="col-sm-4">
-            ausgewählte Dokumente
-            <input id="total" size="4" disabled>
+
+          <div class="col-sm-4 fade" id="stats">
+            <span id="total"></span>
+            Ausgewählt
           </div>
--->
+
           <div class="col-sm-6">
             <button class="btn btn-md btn-success" id="start">&#128065; Zeigen</button>
             <button class="btn btn-md btn-warning" id="restart">&cir; Neuauswahl</button>
