--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -140,7 +140,7 @@
 
     <div class="modal fade" tabindex="-1" role="dialog" id="spinnerModal">
       <div class="modal-dialog modal-dialog-centered text-center" role="document">
-        <span class="fa fa-spinner fa-spin fa-3x w-100">🖌 ⌛ 🎨</span>
+        <!-- <span class="fa fa-spinner fa-spin fa-3x w-100">🖌 ⌛ 🎨</span> -->
       </div>
     </div>
 
