--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -7,7 +7,10 @@
 
     <title>PANOPTIKUM</title>
 
-    <link rel="stylesheet" href="/static/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="/static/lib/photoswipe/default-skin/default-skin.css" media="screen">
+    <link rel="stylesheet" href="/static/lib/photoswipe/photoswipe.css" media="screen">
+
     <link rel="stylesheet" href="/static/custom.css">
   </head>
   <body>
@@ -25,7 +28,7 @@
             Ausgewählt
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-sm-6">
             <button class="btn btn-md btn-success" id="start">&#128065; Zeigen</button>
             <button class="btn btn-md btn-warning" id="restart">&cir; Neuauswahl</button>
             <button class="btn btn-md" id="random">&infin; Zufall</button>
@@ -113,9 +116,10 @@
 
             <p>Made by <a href="http://datalets.ch">Oleg Lavrovsky</a>.</p>
             <p>Code released under the <a href="https://github.com/loleg/panoptikum">MIT License</a>.</p>
-            <p>Based on <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>.
-              Icons from <a href="http://fontawesome.io/" rel="nofollow">Font Awesome</a>.
-              Web fonts from <a href="https://fonts.google.com/" rel="nofollow">Google</a>.</p>
+            <p>Based on
+              <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a> &amp;
+              <a href="https://photoswipe.com/" rel="nofollow">PhotoSwipe</a>
+            </p>
 
           </div>
         </div>
@@ -144,8 +148,53 @@
       </div>
     </div>
 
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="pswp__bg"></div>
+        <div class="pswp__scroll-wrap">
+          <div class="pswp__container">
+            <div class="pswp__item"></div>
+            <div class="pswp__item"></div>
+            <div class="pswp__item"></div>
+          </div>
+          <div class="pswp__ui pswp__ui--hidden">
+            <div class="pswp__top-bar">
+                <div class="pswp__counter" style="visibility: hidden"></div>
+
+                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+                <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
+                <!-- <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button> -->
+                <!-- <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button> -->
+
+                <div class="pswp__preloader">
+                    <div class="pswp__preloader__icn">
+                      <div class="pswp__preloader__cut">
+                        <div class="pswp__preloader__donut"></div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                <div class="pswp__share-tooltip"></div>
+            </div>
+
+            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+            </button>
+
+            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+            </button>
+
+            <div class="pswp__caption">
+                <div class="pswp__caption__center"></div>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <script src="/static/lib/jquery-3.3.1.js"></script>
-    <script src="/static/lib/bootstrap.js"></script>
+    <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
+    <script src="/static/lib/photoswipe/photoswipe.min.js"></script>
+    <script src="/static/lib/photoswipe/photoswipe-ui-default.min.js"></script>
 
     <script src="/static/search.js"></script>
     <script src="/static/site.js"></script>
