--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -110,16 +110,13 @@
         </div>
       </div>
 
-      <footer id="footer" style="display:none">
+      <footer id="footer">
         <div class="row">
           <div class="col-lg-12">
 
-            <p>Made by <a href="http://datalets.ch">Oleg Lavrovsky</a>.</p>
-            <p>Code released under the <a href="https://github.com/loleg/panoptikum">MIT License</a>.</p>
-            <p>Based on
-              <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a> &amp;
-              <a href="https://photoswipe.com/" rel="nofollow">PhotoSwipe</a>
-            </p>
+            <p>Impressum:
+              2019 <a href="http://datalets.ch">Datalets</a> &bull;
+              <a href="https://github.com/dataletsch/panoptikum">Open source</a> under the MIT License</a>.</p>
 
           </div>
         </div>
