--- a/static/custom.css
+++ b/static/custom.css
@@ -1,16 +1,85 @@
-body { margin-top: 1em; }
+body { 
+  margin-top: 1em; 
 }
+
 .pswp__button--arrow--left::before, .pswp__button--arrow--right::before {
   background-color: #ccc !important;
 }
+
 .pswp__bg, .pswp__caption, .pswp__top-bar, body {
   background-color: #ccc !important;
   color: #000;
 }
 
+.anleitung-infoblock{
+  background-color:white;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+}
+
+.anleitung {
+  margin: 0 .25rem 0 0;
+}
+
+/*   new navigation styles   */
+.flex-container {
+  display: flex;
+  align-items: baseline;
+}
+.btn_bildarchiv {
+/*  background-color:rgb(154,154,154);*/
+  color:black;
+  padding: .5rem 1rem;
+  cursor: pointer; /* Mouse pointer on hover */
+  
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+  display:inline-block;
+}
+.btn_bildarchiv:hover {
+  background-color: rgb(210,210,210);
+  color:black;
+}
+.btn_bildarchiv.active {
+  background-color: white;
+}
+.auswahl {
+  margin-left: auto;
+  margin-right: 1em;
+}
+.anzeige {
+  margin-right: auto;
+}
+.anzeige .btn_bildarchiv {
+  background-color:rgb(255,255,255);
+  padding: .25rem 1rem;
+  border-radius: .25rem;
+}
+.anzeige .disable {
+  cursor: default;
+  opacity: 0.25;
+}
+
+.kategorien {
+}
+
+/* end new navigation styles */
+
 #stats {
   font-weight: 400;
+  background-color:#aaa;
+  
+  display: block;
+  padding: .5rem 1rem;
+
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
 }
+
 #total {
   padding: 0.2em 0.4em;
   font-size: 80%;
@@ -23,7 +92,7 @@ body { margin-top: 1em; }
 }
 
 .nav-tabs > li:first-child {
-  margin-left: 25%;
+  /* margin-left: 25%; */
 }
 
 .nav-tabs {
