--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -46,7 +46,6 @@
 
             <div class="anzeige">
               <a class="btn_bildarchiv" id="restart"><i class="fa fa-refresh"></i> Neuauswahl</a>
-              <!--button class="btn_bildarchiv"><i class="fa fa-ban"></i> Neuauswahl</button--> 
               <a class="btn_bildarchiv" id="random"><i class="fa fa-random"></i> Zufall</a>
               <a class="btn_bildarchiv disable" id="start"><i class="fa fa-play"></i> Zeigen</a>
             </div>
@@ -62,7 +61,7 @@
               
                 <div class="form-group">
                   <label class="col-form-label" for="inputTitel">Titel</label>
-                  <input class="form-control" placeholder="" name="Titel" type="text">
+                  <input placeholder="" name="Titel" type="text">
                 </div>
     
                 <div class="form-group" data-cols="1"
@@ -76,12 +75,12 @@
 
                 <div class="form-group">
                   <label class="col-form-label" for="inputJahr">Jahreszahl (ab 1973)</label>
-                  <input class="form-control" placeholder="" name="Jahr" type="text">
+                  <input placeholder="" name="Jahr" type="text">
                 </div>
 
                 <div class="form-group">
                   <label class="col-form-label" for="inputNummer">Werknummer</label>
-                  <input class="searchOnEnter form-control" name="Nummer" type="text">
+                  <input class="searchOnEnter" name="Nummer" type="text">
                 </div>
 <!--
                 <h5>Chronologie</h5>
