--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -22,9 +22,9 @@
           <div class="col-sm">
             <h4>Bildarchiv Jürg Straumann</h4>
             <ul class="anleitung-infoblock">
-              <li class="anleitung">Wählen Sie eine der drei Rubriken „Inhalt“, „Form“ oder „Anderes“ an</li>
-              <li class="anleitung">Klicken Sie auf eine gewünschte Kategorie</li>
-              <li class="anleitung">um die Auswahl einzugrenzen, können Sie eine weitere Kategorie aus einer anderen Rubrik anklicken. Die so gefundene Anzahl Resultate wird Ihnen im Feld „Ausgewählt“ angezeigt.</li>
+              <li class="anleitung">Wählen Sie eine der drei Rubriken „Inhalt“, „Form“ oder „Anderes“ an.</li>
+              <li class="anleitung">Klicken Sie auf eine gewünschte Kategorie.</li>
+              <li class="anleitung">Um die Auswahl einzugrenzen, können Sie eine weitere Kategorie aus einer anderen Rubrik anklicken. Die so gefundene Anzahl Resultate wird Ihnen im Feld „Ausgewählt“ angezeigt.</li>
               <li class="anleitung">Klicken Sie auf „Anzeigen“, um die Auswahl anzuzeigen, auf „Neuauswahl“, um die Auswahl zurückzusetzen oder auf „Zufall“, um den Zufall entscheiden zu lassen.</li>
             </ul>
           </div>
@@ -47,7 +47,7 @@
             <div class="anzeige">
               <a class="btn_bildarchiv" id="restart"><i class="fa fa-refresh"></i> Neuauswahl</a>
               <a class="btn_bildarchiv" id="random"><i class="fa fa-random"></i> Zufall</a>
-              <a class="btn_bildarchiv disable" id="start"><i class="fa fa-play"></i> Zeigen</a>
+              <a class="btn_bildarchiv disable" id="start"><i class="fa fa-play"></i> Anzeigen</a>
             </div>
           </div>
     
