--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="anzeige">
-              <a class="btn_bildarchiv" id="restart"><i class="fa fa-refresh"></i> Neuauswahl</a>
+              <a class="btn_bildarchiv disable" id="restart"><i class="fa fa-times-circle"></i> Neuauswahl</a>
               <a class="btn_bildarchiv" id="random"><i class="fa fa-random"></i> Zufall</a>
               <a class="btn_bildarchiv disable" id="start"><i class="fa fa-play"></i> Anzeigen</a>
             </div>
