--- a/static/custom.css
+++ b/static/custom.css
@@ -56,7 +56,7 @@ body {
   padding: .25rem 1rem;
   border-radius: .25rem;
 }
-.anzeige .disable {
+.disable {
   cursor: default;
   opacity: 0.25;
 }
@@ -102,6 +102,10 @@ body {
   padding-bottom: 0.5em;
 }
 
+.form-check count:hover, .form-check label:hover {
+  cursor: pointer;
+}
+
 .form-group .form-check count {
   margin: 0;
 /*  width: 100%; */
@@ -120,7 +124,7 @@ body {
 .form-group .form-check:hover count span {
   opacity: 1.0;
 }
-
+/*
 .form-group .form-check-input + label {
   border: 1px solid transparent;
 }
@@ -129,6 +133,10 @@ body {
   border: 1px solid blue;
 }
 
+.form-group .form-check-input:hover + label {
+  background-color: blue;
+}
+*/
 button#back {
   float: right;
 }
