--- a/static/custom.css
+++ b/static/custom.css
@@ -49,7 +49,9 @@ body {
   margin-right: 1em;
 }
 .anzeige {
+  margin-top: 0.5em;
   margin-right: auto;
+  text-align: center;
 }
 .anzeige .btn_bildarchiv {
   background-color:rgb(255,255,255);
@@ -209,4 +211,19 @@ button#back {
 
 #footer .row {
   font-size: 80%; text-align: center;
+}
+
+/* ---------------------------- */
+/* styles for title list search */
+#_contentArea > div:nth-of-type(odd) {
+  background: #eee;
+}
+
+#contentAreaYear > div:hover, #contentAreaTitle > div:hover {
+  cursor: pointer;
+  background: #eee;
+}
+
+#contentAreaYear, #contentAreaTitle {
+  padding-left:.1em;
 }
