--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -44,13 +44,13 @@
             <div class="auswahl">
               <span class="">Ausgewählt: <span id="total">0</span></span>
             </div>
+          </div>
 
             <div class="anzeige">
               <a class="btn_bildarchiv disable" id="restart"><i class="fa fa-times-circle"></i> Neuauswahl</a>
               <a class="btn_bildarchiv" id="random"><i class="fa fa-random"></i> Zufall</a>
               <a class="btn_bildarchiv disable" id="start"><i class="fa fa-play"></i> Anzeigen</a>
             </div>
-          </div>
     
           <div class="tab-content">
           <div class="tab-pane active show" id="inhalt"></div>
@@ -62,7 +62,7 @@
               
                 <div class="form-group">
                   <label class="col-form-label" for="inputTitel">Titel</label>
-                  <input list="artworkstitles" autocomplete="off" autofocus placeholder="Titel" type="text">
+                  <input name="Titel" autocomplete="off" autofocus placeholder="Titelsuche" type="text" class="searchOnEnter">
                   <script>
                     let input = document.querySelector('input');
 
@@ -70,28 +70,29 @@
                       let result = [];
                       if (input.value) {
                         for (word of titlelist_uniqueEntries) {
-/* 
-                          // option mit suche nach anfangsbuchstabe
-                          if (word.toLowerCase().startsWith('<div>'+input.value.toLowerCase())) {
-                            result.push(word);
-                          }
-*/                        
-                          // option mit suche als wort
-                           if (word.toLowerCase().indexOf(input.value.toLowerCase()) > -1) {
-                            result.push(word);
+                          word = word.slice(5,-6); //removes <div></div> for search from word
+                          if (input.value.length == 1) {
+                            // option mit suche nach anfangsbuchstabe bei 1 buchstaben im feld
+                            if (word.toLowerCase().startsWith(input.value.toLowerCase())) {
+                              result.push('<div>'+word+'</div>');
+                            }
+                          } else {
+                          // option mit suche als zeichenkette wenn mehr als 1buchstaben im feld sind
+                          if (word.toLowerCase().indexOf(input.value.toLowerCase()) > -1) { //compares values
+                              result.push('<div>'+word+'</div>');
+                            }
                           }
                         }
                       } else {
                         // no value in found
                         result = titlelist_uniqueEntries;
                       }
-                      clusterize.update(result);                   
+                      clusterTitle.update(result);                   
                     };
                   </script>
-                  
                   <!--HTML scroll clusterize area-->
-                  <div id="scrollArea" class="clusterize-scroll">
-                    <div id="contentArea" class="clusterize-content">
+                  <div id="scrollAreaTitle" class="clusterize-scroll">
+                    <div id="contentAreaTitle" class="clusterize-content">
                       <div class="clusterize-no-data">Lade titel…</div>
                     </div>
                   </div>
@@ -106,9 +107,36 @@
     
               <div class="col-sm-4">
 
-                <div class="form-group">
+                <div class="form-group">                 
                   <label class="col-form-label" for="inputJahr">Jahreszahl (ab 1973)</label>
-                  <input placeholder="" name="Jahr" type="text">
+                  <input placeholder="" id="inputYear" name="Jahr" type="text">
+                  <script>
+                    let inputyear = document.querySelector('#inputYear');
+
+                    inputyear.onkeyup = function() {
+                      let result = [];
+                      if (inputyear.value) {
+                        for (word of yearlist) {
+                          word = word.slice(5,-6); //removes <div></div> for search from word
+                            // option mit suche nach anfangsbuchstabe bei 1 buchstaben im feld
+                            if (word.toLowerCase().startsWith(inputyear.value.toLowerCase())) {
+                              result.push('<div>'+word+'</div>');
+                            }
+                        }
+                      } else {
+                        // no value in found
+                        result = yearlist;
+                      }
+                      clusterYear.update(result);                   
+                    };
+                  </script>                  
+                  <!--HTML scroll clusterize area-->
+                  <div id="scrollAreaYear" class="clusterize-scroll-5">
+                    <div id="contentAreaYear" class="clusterize-content">
+                      <div class="clusterize-no-data">Lade Jahre...</div>
+                    </div>
+                  </div>
+
                 </div>
 
                 <div class="form-group">
