--- a/static/custom.css
+++ b/static/custom.css
@@ -1,5 +1,5 @@
-body { 
-  margin-top: 1em; 
+body {
+  margin-top: 1em;
 }
 
 .pswp__button--arrow--left::before, .pswp__button--arrow--right::before {
@@ -31,7 +31,7 @@ body {
   color:black;
   padding: .5rem 1rem;
   cursor: pointer; /* Mouse pointer on hover */
-  
+
   border: 1px solid transparent;
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
@@ -66,7 +66,8 @@ body {
 /*.kategorien { }*/
 
 /* end new navigation styles */
-#anderes input{
+
+#anderes input[type="text"] {
   display: block;
   width: 100%;
   padding: .375rem .75rem;
@@ -83,6 +84,12 @@ body {
 #anderes .form-check-input {
   border:1px solid green;
   padding: 0;
+}
+
+.clusterize-content {
+    background: white;
+    margin-left: 5px;
+    color: #555;
 }
 
 #total {
@@ -102,6 +109,10 @@ body {
 
 .form-group .form-check {
   padding-bottom: 0.5em;
+  opacity: 0.9;
+}
+.form-group .form-check:hover {
+  opacity: 1.0;
 }
 
 .form-check label:hover {
@@ -109,14 +120,11 @@ body {
 }
 
 .count {
+  float: right;
   padding: 0.2em 0.4em;
   font-size: 80%;
-  background: #eee;
-  color: #555;
-  opacity: 0.4;
-}
-.form-group .form-check:hover .count {
-  opacity: 1.0;
+  background: transparent;
+  color: white;
 }
 
 /*
